# RAG-on-Google-Drive

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
eval/: golden_set.json  run_eval.py
src/api/: main.py
src/api/routes/: ask.py  sync.py
src/connectors/: base.py  google_drive.py
src/core/: config.py  logging.py
src/embedding/: base.py  st_embedder.py
src/processing/: chunk.py  clean.py  extract.py
src/rag/: llm.py  pipeline.py  prompt.py
src/search/: index.py  opensearch_client.py  retriever.py
src/sync/: orchestrator.py  state.py
