[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "highwatch-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.6",
    "pydantic-settings",
    "structlog",
    "httpx",
    "opensearch-py[async]",
    "sentence-transformers",
    "pypdf",
    "python-docx",
    "google-api-python-client",
    "google-auth",
    "google-genai>=0.3.0",
    "tenacity",
    "anthropic",
    "numpy",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src"]
